# todo-list

./: LICENSE  README.md  main.py  pyproject.toml  todos.json
src/todo/: main.py
